syntax = "proto3";
package service;
option go_package = "./;grpcService";

//注册
message RegisterRequest{
  string Username = 1;
  string Password = 2;
  string PasswordConfirm = 3;
}

message RegisterResponse{
  string ID = 1;
  string Username = 2;
  string Password = 3;
}

//登录
message LoginRequest{
  string Username = 1;
  string Password = 2;
}

message LoginResponse{
  string ID = 1;
  string Username = 2;
  string Password = 3;
  string Token = 4;
}

//方法
service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}